fix strange bug on ios

--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -58,21 +58,21 @@ page-messages {
 
 	&:last-child {
 		&:before {
-			content:"";
-			position:absolute;
-			z-index:-1;
-			bottom:-2px;
-			right:-7px;
-			height:20px;
-			border-right:20px solid map-get($colors, primary);
+			content: "";
+			position: absolute;
+			z-index: 1;
+			bottom: -2px;
+			right: -7px;
+			height: 20px;
+			border-right: 20px solid map-get($colors, primary);
 			border-bottom-left-radius: 16px 14px;
-			-webkit-transform:translate(0, -2px);
+			transform: translate(0, -2px);
 		}
 
 		&:after {
 			content: "";
 			position: absolute;
-			z-index: 1;
+			z-index: 2;
 			bottom: -2px;
 			right: -56px;
 			width: 26px;
@@ -86,7 +86,7 @@ page-messages {
 
 .burst--other .messages__message {
 	background: map-get($colors, other_grey);
-	color: black;
+	color: map-get($colors, dark);
 
 	float: left;
 
